adding 1164 and 1048 on extras

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 gg.py
 iterate_through_a_sublist_in_python.md
 1040-notes.md
+artur.py
+aula04.py
+henrique.py
+
+#extras
+1042.py
+1098-revisao.py
