adding URI problems: 1017, 1037, 1050 and 1074 from 08/10/2020. Adding 1043 from today, 12/10/2020

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ henrique.py
 #extras
 1042.py
 1098-revisao.py
+
+#P1
+1118-input.md
+1118-output.md
+1118.py
+bloco-intervalo.py
+bloco-teste.py
+precedencia-X.py
+problemas-prova.md
+wtf-1118.py
